<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>extreme3dpro_driver</name>
  <version>0.1.0</version>

  <description>
    ROS 2 driver for Logitech Extreme 3D Pro joystick.
    Reads raw HID/evdev input and publishes sensor_msgs/Joy
    and geometry_msgs/Twist messages.
  </description>

  <maintainer email="darmawandeveloper@gmail.com">Agus Darmawan</maintainer>

  <license>Apache-2</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Optional but recommended -->
  <exec_depend>joy</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>